# PopPUNK

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CITATION.bib  CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  README.md  api.html  azure-pipelines.yml  azure_pipelines.yml  citing.html  dependencies.txt  environment.yml  genindex.html  gpu.html  index.html  installation.html  miscellaneous.html  model_distribution.html  model_fitting.html  mst.html  objects.inv  overview.html  poppunk-runner.py  poppunk_api-runner.py  poppunk_assign-runner.py  poppunk_info-runner.py  poppunk_iterate.html  poppunk_lineages-runner.py  poppunk_mandrake-runner.py  poppunk_mst-runner.py  poppunk_pathogenwatch-runner.py  poppunk_prune-runner.py  poppunk_references-runner.py  poppunk_tsne-runner.py  poppunk_visualise-runner.py  (+16 more)
PopPUNK/: __init__.py  __main__.py  assign.py  bgmm.py  citation.py  dbscan.py  info.py  lineage_clustering.py  lineages.py  mandrake.py  mash.py  models.py  network.py  pathogenwatch_api.py  plot.py  prune_db.py  qc.py  reference_pick.py  refine.py  sketchlib.py  sparse_mst.py  trees.py  tsne.py  unwords.py  utils.py  visualise.py  web.py
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  miscellaneous.rst.txt  overview.rst.txt  scripts.rst.txt  sketching.rst.txt
assigning/: bgmm.py  mash.py  network.py  plot.py  strainStructure.py
boost/: Dockerfile  extract
buildkite/: pipeline.yml
docker/: .dockerignore  Dockerfile  build  build_graph_tool  common  entrypoint.sh  graphTool.Dockerfile  graph_tool_common  sshd_config  test  test_graph_tool
docker2/: Dockerfile  build  push
docs/: CNAME  CONTRBUTING.md  Makefile  api.rst  best_practises.rst  citing.rst  conf.py  gpu.rst  index.rst  installation.rst  make.bat  miscellaneous.rst  model_distribution.rst  model_fitting.rst  mst.rst  online.rst  options.rst  overview.rst  poppunk_iterate.rst  qc.rst  query_assignment.rst  quickstart.rst  requirements.txt  roadmap.rst  scripts.rst  setup.py  sketching.rst  subclustering.rst  troubleshooting.rst  tutorial.rst  visualisation.rst
scripts/: calculate_rand_indices.py  calculate_silhouette.py  extract_distances.py  generate_microreact.py  poppunk_add_weights.py  poppunk_alternative_distances.py  poppunk_batch_mst.py  poppunk_calculate_rand_indices.py  poppunk_db_info.py  poppunk_distribute_fit.py  poppunk_easy_run.py  poppunk_extract_components.py  poppunk_extract_distances.py  poppunk_filter_sequences.py  poppunk_flip_sequences.py  poppunk_iterate.py  poppunk_pickle_fix.py  poppunk_sample_info.py  rerun_t_sne.py
src/: boundary.cpp  boundary.hpp  extend.cpp  extend.hpp  linear_regression.cpp  linear_regression.hpp  link_function.cpp  link_function.hpp  python_bindings.cpp  regression_bindings.cpp
strainStructure/: __init__.py  __main__.py  bgmm.py  mash.py  network.py  plot.py
test/: batch123_info.csv  batch12_external_clusters.csv  clean_test.py  default_priors.txt  (+25 more)
(+25 files in other folders)
